upload G1.md